--- a/inst/app/www/styles.css
+++ b/inst/app/www/styles.css
@@ -6,8 +6,19 @@
   border-color: #07274A !important;
 }
 
-/* Filter box identation */
-.dropdown.bootstrap-select.show-tick.form-control {margin-left: 30px}
+/* Filter box identation
+.dropdown.bootstrap-select.show-tick.form-control {
+  margin-left: 30px;
+}
+*/
 
-/* Filter label identation */
-.control-filter-label {margin-left: 10px}
+/* Filter label identation
+.control-filter-label {
+  margin-left: 10px;
+}
+*/
+
+/* Apply padding between the global filters pane and the filter widgets/labels */
+#control_bar {
+  padding: 20px;
+}
