Removes "Upload Complete" text in progress bar

--- a/inst/app/www/styles.css
+++ b/inst/app/www/styles.css
@@ -32,3 +32,7 @@ smaller screen widths */
   padding: 0.5rem;
 }
 
+/* Hide the "Upload Complete" text in the `fileInput` progress bar */
+.progress-bar {
+  color: transparent !important;
+}
