--- a/inst/app/www/styles.css
+++ b/inst/app/www/styles.css
@@ -44,3 +44,8 @@ smaller screen widths */
   justify-content: center;
   align-content: center;
 }
+
+/* Add style to welcome page boxes */
+.welcome-box .card-body {
+  text-align: justify
+}
