--- a/inst/app/www/styles.css
+++ b/inst/app/www/styles.css
@@ -55,3 +55,8 @@ smaller screen widths */
   font-size: 1.5rem;
 }
 
+/* Add style to help page */
+.help-page-content {
+  background-color: white;
+  text-align: justify;
+}
