Bring datepicker to front

--- a/inst/app/www/styles.css
+++ b/inst/app/www/styles.css
@@ -80,3 +80,8 @@ smaller screen widths */
   background-color: white;
   text-align: justify;
 }
+
+/* Bring datepicker to front */
+.datepicker {
+  z-index: 99999 !important;
+}
