Use bslib::popover instead of bslib::tooltip

--- a/inst/app/www/styles.css
+++ b/inst/app/www/styles.css
@@ -80,3 +80,8 @@ smaller screen widths */
 .datepicker {
   z-index: 99999 !important;
 }
+
+/* Hide popover close button */
+.popover .btn-close {
+  display: none !important;
+}
