--- a/inst/app/www/styles.css
+++ b/inst/app/www/styles.css
@@ -6,10 +6,9 @@
   border-color: #07274A !important;
 }
 
-/* Decrease the padding around {bs4Dash} boxes to accommodate more chart labels at
-smaller screen widths */
 .card-body {
   padding: 0.5rem;
+  overflow: hidden !important; /* Fix "scrolling" bug when "Expand" window is closed */
 }
 
 /* Hide the "Upload Complete" text in the `fileInput` progress bar */
